# python-restaurant-reservations

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: __init__.py  celery.py  settings.py  urls.py
restaurant/: admin.py  choose_table_form.py  forms.py  models.py  tasks.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_alter_table_options.py  0002_remove_table_date_reserved_remove_table_reserved_at_and_more.py  0003_rename_capacity_table_seats.py  0004_booking_message.py  0005_booking_cancelled_at_booking_is_cancelled_and_more.py  0006_remove_booking_cancelled_at_and_more.py  0007_booking_created_at_bookinghistory_created_at.py
restaurant/templates/restaurant/: about.html  all_pages.html  base.html  book_table.html  booking_form.html  booking_list.html  choose_table.html  contacts.html  gallery.html  index.html  menu.html  starter-page.html  success_send_message.html  table_list.html
restaurant/templatetags/: custom_filters.py
static/css/: main.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py  0003_user_avatar.py  0004_alter_user_avatar.py  0005_alter_user_avatar.py  0006_user_token.py  0007_user_notes.py
users/templates/users/: login.html  password_reset.html  profile.html  register.html
