[tool.poetry]
name = "restaurant-reservations"
version = "0.1.0"
description = ""
authors = ["Sprite_Spirit <Sprite.spirit.t.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
django = "^5.1.1"
django-phonenumber-field = "^8.0.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
gevent = "^24.2.1"
redis = "^5.1.1"
docker = "^7.1.0"
compose = "^1.6.2"
django-countries = "^7.6.1"
django-phonenumbers = "^1.0.1"
django-cors-headers = "^4.4.0"
flake8 = "^7.1.1"
flake8-html = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
